// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
  1 |
  2 |         type User {
  3 |           password: String
> 4 |           firstName: String!
    |           ^^^^^^^^^ "firstName" should be before "password"
  5 |           age: Int
  6 |           lastName: String!
  7 |         }
  8 |       
`;

exports[` 2`] = `
  1 |
  2 |         type User {
  3 |           password: String
  4 |           firstName: String!
> 5 |           age: Int
    |           ^^^ "age" should be before "firstName"
  6 |           lastName: String!
  7 |         }
  8 |       
`;

exports[` 3`] = `
  1 |
  2 |         extend type User {
  3 |           age: Int
  4 |           firstName: String!
  5 |           password: String
> 6 |           lastName: String!
    |           ^^^^^^^^ "lastName" should be before "password"
  7 |         }
  8 |       
`;

exports[` 4`] = `
  1 |
  2 |         interface Test {
  3 |           cc: Int
> 4 |           bb: Int
    |           ^^ "bb" should be before "cc"
  5 |           aa: Int
  6 |         }
  7 |       
`;

exports[` 5`] = `
  1 |
  2 |         interface Test {
  3 |           cc: Int
  4 |           bb: Int
> 5 |           aa: Int
    |           ^^ "aa" should be before "bb"
  6 |         }
  7 |       
`;

exports[` 6`] = `
  1 |
  2 |         input UserInput {
  3 |           password: String
> 4 |           firstName: String!
    |           ^^^^^^^^^ "firstName" should be before "password"
  5 |           age: Int
  6 |           lastName: String!
  7 |         }
  8 |       
`;

exports[` 7`] = `
  1 |
  2 |         input UserInput {
  3 |           password: String
  4 |           firstName: String!
> 5 |           age: Int
    |           ^^^ "age" should be before "firstName"
  6 |           lastName: String!
  7 |         }
  8 |       
`;

exports[` 8`] = `
  1 |
  2 |         extend input UserInput {
  3 |           age: Int
  4 |           firstName: String!
  5 |           password: String
> 6 |           lastName: String!
    |           ^^^^^^^^ "lastName" should be before "password"
  7 |         }
  8 |       
`;

exports[` 9`] = `
  1 |
  2 |         enum Role {
  3 |           SUPER_ADMIN
> 4 |           ADMIN
    |           ^^^^^ "ADMIN" should be before "SUPER_ADMIN"
  5 |           USER
  6 |           GOD
  7 |         }
  8 |       
`;

exports[` 10`] = `
  1 |
  2 |         enum Role {
  3 |           SUPER_ADMIN
  4 |           ADMIN
  5 |           USER
> 6 |           GOD
    |           ^^^ "GOD" should be before "USER"
  7 |         }
  8 |       
`;

exports[` 11`] = `
  1 |
  2 |         extend enum Role {
  3 |           ADMIN
  4 |           SUPER_ADMIN
> 5 |           GOD
    |           ^^^ "GOD" should be before "SUPER_ADMIN"
  6 |           USER
  7 |         }
  8 |       
`;

exports[` 12`] = `
  1 |
> 2 |         directive @test(cc: Int, bb: Int, aa: Int) on FIELD_DEFINITION
    |                                  ^^ "bb" should be before "cc"
  3 |       
`;

exports[` 13`] = `
  1 |
> 2 |         directive @test(cc: Int, bb: Int, aa: Int) on FIELD_DEFINITION
    |                                           ^^ "aa" should be before "bb"
  3 |       
`;

exports[` 14`] = `
  1 |
  2 |         type Query {
> 3 |           test(cc: Int, bb: Int, aa: Int): Int
    |                         ^^ "bb" should be before "cc"
  4 |         }
  5 |       
`;

exports[` 15`] = `
  1 |
  2 |         type Query {
> 3 |           test(cc: Int, bb: Int, aa: Int): Int
    |                                  ^^ "aa" should be before "bb"
  4 |         }
  5 |       
`;

exports[` 16`] = `
  1 |
  2 |         fragment TestFields on Test {
  3 |           cc
> 4 |           bb
    |           ^^ "bb" should be before "cc"
  5 |           aa
  6 |         }
  7 |       
`;

exports[` 17`] = `
  1 |
  2 |         fragment TestFields on Test {
  3 |           cc
  4 |           bb
> 5 |           aa
    |           ^^ "aa" should be before "bb"
  6 |         }
  7 |       
`;

exports[` 18`] = `
   1 |
   2 |         query {
   3 |           test {
   4 |             cc
>  5 |             bb
     |             ^^ "bb" should be before "cc"
   6 |             aa
   7 |             ... on Test {
   8 |               ccc
   9 |               bbb
  10 |               aaa
  11 |             }
  12 |           }
  13 |         }
  14 |       
`;

exports[` 19`] = `
   1 |
   2 |         query {
   3 |           test {
   4 |             cc
   5 |             bb
>  6 |             aa
     |             ^^ "aa" should be before "bb"
   7 |             ... on Test {
   8 |               ccc
   9 |               bbb
  10 |               aaa
  11 |             }
  12 |           }
  13 |         }
  14 |       
`;

exports[` 20`] = `
   1 |
   2 |         query {
   3 |           test {
   4 |             cc
   5 |             bb
   6 |             aa
   7 |             ... on Test {
   8 |               ccc
>  9 |               bbb
     |               ^^^ "bbb" should be before "ccc"
  10 |               aaa
  11 |             }
  12 |           }
  13 |         }
  14 |       
`;

exports[` 21`] = `
   1 |
   2 |         query {
   3 |           test {
   4 |             cc
   5 |             bb
   6 |             aa
   7 |             ... on Test {
   8 |               ccc
   9 |               bbb
> 10 |               aaa
     |               ^^^ "aaa" should be before "bbb"
  11 |             }
  12 |           }
  13 |         }
  14 |       
`;

exports[` 22`] = `
  1 |
> 2 |         mutation ($cc: Int, $bb: Int, $aa: Int) {
    |                             ^^^ "$bb" should be before "$cc"
  3 |           test(ccc: $cc, bbb: $bb, aaa: $aa) {
  4 |             something
  5 |           }
  6 |         }
  7 |       
`;

exports[` 23`] = `
  1 |
> 2 |         mutation ($cc: Int, $bb: Int, $aa: Int) {
    |                                       ^^^ "$aa" should be before "$bb"
  3 |           test(ccc: $cc, bbb: $bb, aaa: $aa) {
  4 |             something
  5 |           }
  6 |         }
  7 |       
`;

exports[` 24`] = `
  1 |
  2 |         mutation ($cc: Int, $bb: Int, $aa: Int) {
> 3 |           test(ccc: $cc, bbb: $bb, aaa: $aa) {
    |                          ^^^ "bbb" should be before "ccc"
  4 |             something
  5 |           }
  6 |         }
  7 |       
`;

exports[` 25`] = `
  1 |
  2 |         mutation ($cc: Int, $bb: Int, $aa: Int) {
> 3 |           test(ccc: $cc, bbb: $bb, aaa: $aa) {
    |                                    ^^^ "aaa" should be before "bbb"
  4 |             something
  5 |           }
  6 |         }
  7 |       
`;
